--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="images/turkey_pom.jpg" alt="" height="300">
     <header>
       <h1>Pomegranate-Glazed Duck Breast</h1>
-      <p>This recipe for delicous pomegranate-glazed duck breast makes a prefect holiday meal. Source: The Martha Stewart Show, December Winter 2006</p>
+      <p>This recipe for delicous pomegranate-glazed duck breast makes a perfect holiday meal. Source: The Martha Stewart Show, December Winter 2006</p>
     </header>
 
     <section>
