--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>3 tablespoons coarse salt</li>
         <li>1/2 teaspoon ground coriander</li>
         <li>1/2 teaspoon ground lavender</li>
-        <li>Three 1- pound duck breast halves, trimmed of excess fat and scored</li>
+        <li>3 one pound duck breast halves, trimmed of excess fat and scored</li>
         <li>Zest of 2 oranges</li>
         <li>1/4 cup brandy</li>
         <li>6 sprigs fresh thyme</li>
